<resources>

    <string name="progressActivityErrorButton">Try Again</string>

    <string name="progressActivityEmptyTitlePlaceholder">Nothing Here</string>
    <string name="progressActivityEmptyContentPlaceholder">We couldn\'t find anything. Tap the button to take your first image</string>
    <string name="progressActivityErrorTitlePlaceholder">No Connection</string>
    <string name="progressActivityErrorContentPlaceholder">We could not establish a connection with our servers. Please try again when you are connected to the internet.</string>
</resources>