<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_error"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/image_icon"
        android:layout_width="108dp"
        android:layout_height="108dp"
        tools:background="#000000"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:text="@string/progressActivityEmptyTitlePlaceholder" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:lineSpacingExtra="5.5dp"
        tools:text="@string/progressActivityEmptyContentPlaceholder" />

    <Button
        android:id="@+id/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progressActivityErrorButton"
        android:layout_marginTop="16dp" />

</LinearLayout>