<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/errorStateRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/errorViewRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/errorStateImageView"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_gravity="center_horizontal"
            tools:background="#000000"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/errorStateTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="@string/progressActivityErrorTitlePlaceholder" />

        <TextView
            android:id="@+id/errorStateContentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:lineSpacingExtra="5.5dp"
            tools:text="@string/progressActivityErrorContentPlaceholder" />

        <Button
            android:id="@+id/errorStateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/progressActivityErrorButton"/>

    </LinearLayout>

</RelativeLayout>